[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Pause.gd" type="Script" id=1]
[ext_resource path="res://UI/UI_Theme1.tres" type="Theme" id=2]
[ext_resource path="res://UI/Fade.tscn" type="PackedScene" id=3]

[node name="UI_InGame" type="CanvasLayer"]

[node name="PauseLayer" type="CanvasLayer" parent="."]

[node name="Pause" type="Control" parent="PauseLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="PauseLayer/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.419608 )

[node name="VBoxC" type="VBoxContainer" parent="PauseLayer/Pause"]
anchor_left = 0.34375
anchor_top = 0.361111
anchor_right = 0.65625
anchor_bottom = 0.638889
rect_min_size = Vector2( 600, 300 )
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Continue" type="Button" parent="PauseLayer/Pause/VBoxC"]
margin_right = 600.0
margin_bottom = 61.0
theme = ExtResource( 2 )
text = "Continue"

[node name="Restart Level" type="Button" parent="PauseLayer/Pause/VBoxC"]
margin_top = 86.0
margin_right = 600.0
margin_bottom = 147.0
theme = ExtResource( 2 )
text = "Restart Level"

[node name="Quit to Menu" type="Button" parent="PauseLayer/Pause/VBoxC"]
margin_top = 172.0
margin_right = 600.0
margin_bottom = 233.0
theme = ExtResource( 2 )
text = "Quit to Main Menu"

[node name="Fade" parent="PauseLayer/Pause" instance=ExtResource( 3 )]

[connection signal="pressed" from="PauseLayer/Pause/VBoxC/Continue" to="PauseLayer/Pause" method="_on_Continue_pressed"]
[connection signal="pressed" from="PauseLayer/Pause/VBoxC/Restart Level" to="PauseLayer/Pause" method="_on_Restart_Level_pressed"]
[connection signal="pressed" from="PauseLayer/Pause/VBoxC/Quit to Menu" to="PauseLayer/Pause" method="_on_Quit_to_Menu_pressed"]
